fix: notifications z-index

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@ body {
     @apply text-gray-500 dark:text-white transition-colors ease-in;
 }
 .notify-container {
-    @apply fixed top-0 right-0;
+    @apply fixed top-0 right-0 z-50;
     @apply my-4 mx-4;
 }
 
